--- a/webpage/css/styles.css
+++ b/webpage/css/styles.css
@@ -43,10 +43,34 @@ div {
 }
 
 img {
-    width: 50%;
+    width: 100%;
     height: auto;
 }
 
-figure {
+button {
+    padding: 0;
+    margin: 0;
+    border: none;
+    cursor: pointer; 
+}
+
+#previewFunctionSelectContainer {
+    text-align: left;
+    position: relative;
+}
+
+#previewFunctionSelectContainer #previewFunctionSelectTooltip {
+    visibility: hidden;
+    width: 10em;
+    background-color: black;
+    color: white;
     text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+}
+
+#previewFunctionSelectContainer:hover #previewFunctionSelectTooltip {
+    visibility: visible;
 }
