--- a/webpage/css/styles.css
+++ b/webpage/css/styles.css
@@ -9,7 +9,8 @@ header, footer {
     background-color: rgb(95,93,121);
     color: white;
     text-align: center;
-    padding-bottom: 1rem;
+    padding-bottom: 1.5rem;
+    margin: auto;
 }
 
 #globContainer {
